--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>OpenSeadragon Scalebar</title>
 
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="/resources/demos/style.css">
+        <!--sss<link rel="stylesheet" href="/resources/demos/style.css">-->
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
