Fix styles and socket

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset='utf-8'>
 
         <title>OpenSeadragon Scalebar</title>
-
+        <link rel="shortcut icon" type="image/jpg" href="openseadragon/images/zoomin_hover.png"/>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <!--sss<link rel="stylesheet" href="/resources/demos/style.css">-->
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -184,10 +184,11 @@
                         /*viewer.viewer.zoomLevels({
                             levels: [1, 5, 10]
                         });*/
-                        viewer.viewer.smartScrollZoom({
+
+                        /*viewer.viewer.smartScrollZoom({
                             minScrolls: 4,
                            
-                        });
+                        });*/
                         //viewer.viewer.smartScrollZoom.toggleEnable();
                    },2000)                                                         
             </script>                     
