--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         min: -180,
                         max: 180,
                         slide: function(event, ui) {
-                            viewer.viewer.viewport.setRotation(ui.value);
+                            //viewer.viewer.viewport.setRotation(ui.value);
                         }
                     });
                     sliderDragToggle=!1
